--- a/src/app/Paginas/Body/backups/backups.component.html
+++ b/src/app/Paginas/Body/backups/backups.component.html
@@ -84,7 +84,7 @@
   </div>
 </div>
 <div class="container text-center" *ngIf="backService.backups.length == 0" style="margin-top: 200px;">
-  <h2 class="font-weight-lighter">El usuario todavia no ha realizado ningun respaldo</h2>
+  <h2 class="font-weight-lighter">{{util.msj}}</h2>
 </div>
 <!-- ------------------------------------------------------------------------------------------------------ -->
 <button class="up-left rounded-circle" (click)="util.subir()">
@@ -202,12 +202,12 @@
         <td class="Celdas-Tabla">{{(back.date_download == '0000-00-00 00:00:00') ? 'Sin descarga': back.date_download | date:'dd MMMM yyyy hh:mm:ss'}}</td>
         <td class="Celdas-Tabla">{{back.created_in}}</td>
         <td class="Celdas-Tabla" >
-          <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter" style="width: 90px; margin-right: 10px; font-size: 18px" (click)="abrirModalActualizar([back.pos, i, true], back)">
+          <button type="button" class="btn btn-primary btn-update" data-toggle="modal" data-target="#exampleModalCenter" (click)="abrirModalActualizar([back.pos, i, true], back)">
               <span>
                 <fa-icon [icon]="util.faPen"></fa-icon>
               </span>
           </button>
-          <button type="submit" class="btn btn-danger" style="width: 90px; margin-left: 10px; font-size: 18px" (click)="eliminar([back.pos, i, true], back)">
+          <button type="button" class="btn btn-danger btn-delete" (click)="eliminar([back.pos, i, true], back)">
               <span>
                 <fa-icon [icon]="util.faTrash"></fa-icon>
               </span>
@@ -215,11 +215,6 @@
         </td>
       </ng-container>
     </tr>
-    <div
-      infiniteScroll
-      [infiniteScrollDistance]="2"
-      (scrolled)="onScroll()">
-    </div>
     </tbody>
     <!-- ------------------------------------------------------------------------------------------------------ -->
   </table>
