--- a/src/styles.css
+++ b/src/styles.css
@@ -250,6 +250,73 @@ app-gastos-entradas {
 .table-fixed-bu thead tr {
   width: calc(100% - 17px);
 }
+
+/*Tabla Fixed XL*/
+.table-fixed-xl {
+  /*overflow-x: scroll;*/
+  width: 100%;
+}
+.table-fixed-xl tbody{
+  overflow-y: scroll;
+  width: 100%;
+}
+.table-fixed-xl thead,
+.table-fixed-xl tbody,
+.table-fixed-xl td,
+.table-fixed-xl th
+{
+  display: block;
+}
+.table-fixed-xl thead tr,
+.table-fixed-xl tbody tr {
+  display: flex;
+}
+.table-fixed-xl thead tr th,
+.table-fixed-xl tbody tr td {
+  width: 12.5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.table-fixed-xl thead{
+  width: 100%;
+  height: 120px !important;
+}
+.table-fixed-xl thead tr {
+  height: 120px !important;
+}
+@media screen and (max-width: 1920px) and (max-height: 1080px){
+  .table-fixed-xl {
+    height: 700px !important;
+    /*width: calc(1920px - 18px) !important;*/
+  }
+  .table-fixed-xl thead{
+    /*width: calc(1920px - 18px) !important;*/
+  }
+  .table-fixed-xl tbody{
+    height: 550px !important;
+    /*width: calc(1920px - 18px) !important;*/
+  }
+}
+@media screen and (max-width: 1366px) and (max-height: 768px){
+  .table-fixed-xl {
+    height: 500px !important;
+    /*width: calc(1366px - 18px) !important;*/
+  }
+  .table-fixed-xl thead tr{
+    /*width: calc(1366px - 18px) !important;*/
+  }
+  .table-fixed-xl tbody{
+    height: 350px !important;
+    /*width: calc(1366px - 18px) !important;*/
+  }
+}
+
+.overflow-x-scroll {
+  overflow-x: scroll;
+}
+
+
 .cdk-overlay-container {
   position: fixed !important;
   z-index: 1051 !important;
@@ -260,4 +327,13 @@ app-gastos-entradas {
 .color-red {
   color: #dc3545;
 }
-
+.btn-update{
+  width: 90px;
+  margin-right: 10px;
+  font-size: 18px;
+}
+.btn-delete{
+  width: 90px;
+  margin-left: 10px;
+  font-size: 18px;
+}
