--- a/src/app/Paginas/Body/backup/accounts/accounts.component.html
+++ b/src/app/Paginas/Body/backup/accounts/accounts.component.html
@@ -4,8 +4,29 @@
   color="#fff"
   type="ball-scale-multiple"
 >
-  <p style="font-size: 20px; color: white">{{msj}}</p>
+  <p style="font-size: 20px; color: white">{{util.msjLoading}}</p>
 </ngx-spinner>
+<!-- ------------------------------------------------------------------------------------------------------ -->
+<div class="modal fade" id="modalAccount" tabindex="-1" role="dialog" aria-labelledby="modalAccountTitle" aria-hidden="true" >
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title centerTitleModal" id="modalAccountTitle">{{option}} Account</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal" >Cerrar</button>
+        <button type="submit" [ngClass]="util.classModal(option)" >{{option}}</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- ------------------------------------------------------------------------------------------------------ -->
 
 <div class="container text-center" *ngIf="accountService.Accounts.length == 0" style="margin-top: 200px;">
   <h2 class="font-weight-lighter">{{util.msj}}</h2>
@@ -58,7 +79,7 @@
       <th scope="col" class="Encabezado-Tabla width-4">
         <div class="row inline-grid">
           Selected
-          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="filtersSearch.selected.value" name="selected" (keyup)="actionFilterEvent($event, 'selected')">
+          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="filtersSearch.selected.value" name="selected" (ngModelChange)="actionFilterEvent($event, 'selected')">
             <option value="-1">Ambos</option>
             <option value="0">No</option>
             <option value="1">Sí</option>
@@ -101,12 +122,12 @@
         <td class="Celdas-Tabla width-4">{{account.rate}}</td>
         <td class="Celdas-Tabla width-4">{{account.icon_name}}</td>
         <td class="Celdas-Tabla width-4">
-          <button type="button" class="btn btn-primary btn-update">
+          <button type="button" class="btn btn-primary btn-update" data-toggle="modal" data-target="#modalAccount" (click)="accionAccount(util.ACTUALIZAR)">
             <span>
               <fa-icon [icon]="util.faPen"></fa-icon>
             </span>
           </button>
-          <button type="button" class="btn btn-danger btn-delete">
+          <button type="button" class="btn btn-danger btn-delete" data-toggle="modal" data-target="#modalAccount" (click)="accionAccount(util.ELIMINAR)">
             <span>
               <fa-icon [icon]="util.faTrash"></fa-icon>
             </span>
@@ -120,6 +141,8 @@
         infiniteScrollContainer=".table-fixed-xl tbody"
         (scrolled)="onScroll()">
       </div>
+      <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
+      <query-complete *ngIf="util.QueryComplete.isComplete" [msj]="util.QueryComplete.msj"></query-complete>
     </tbody>
     <tbody *ngIf="isFilter()">
       <tr *ngFor="let account of accountsFilter; let i = index" >
@@ -146,12 +169,12 @@
         <td class="Celdas-Tabla width-4">{{account.rate}}</td>
         <td class="Celdas-Tabla width-4">{{account.icon_name}}</td>
         <td class="Celdas-Tabla width-4">
-          <button type="button" class="btn btn-primary btn-update">
+          <button type="button" class="btn btn-primary btn-update" data-toggle="modal" data-target="#modalAccount" (click)="accionAccount(util.ACTUALIZAR)">
               <span>
                 <fa-icon [icon]="util.faPen"></fa-icon>
               </span>
           </button>
-          <button type="button" class="btn btn-danger btn-delete">
+          <button type="button" class="btn btn-danger btn-delete" data-toggle="modal" data-target="#modalAccount" (click)="accionAccount(util.ELIMINAR)">
               <span>
                 <fa-icon [icon]="util.faTrash"></fa-icon>
               </span>
@@ -160,6 +183,11 @@
       </tr>
     </tbody>
   </table>
-  <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
-  <query-complete *ngIf="util.QueryComplete.isComplete && !isFilter()" [msj]="util.QueryComplete.msj"></query-complete>
+
 </div>
+
+<button type="button" class="btn btn-success rounded-circle addButton" data-toggle="modal" data-target="#modalAccount" (click)="accionAccount(util.AGREGAR)">
+          <span>
+            <fa-icon [icon]="util.faPlus"></fa-icon>
+          </span>
+</button>
